--- a/src/css/index.css
+++ b/src/css/index.css
@@ -164,3 +164,19 @@ button:hover {
 .hidden {
     display: none;
 }
+
+.load-button {
+    border-radius: 8px;
+    padding: 8px 16px;
+    width: 125px;
+    height: 40px;
+    background-color: #4e75ff;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #fff;
+    margin: 0 auto;
+    margin-top: 32px;
+    margin-bottom: 44px;
+}
